force-app/main/default/objects/Account/fields/Average_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Gift_Amount__c</fullName>
    <label>Average Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>