force-app/main/default/objects/Account/fields/Church_Email__c.field-meta.xml
<CustomField>
    <fullName>Church_Email__c</fullName>
    <label>Church Email</label>
    <type>Email</type>
</CustomField>