force-app/main/default/objects/Account/fields/Education_Partner__c.field-meta.xml
<CustomField>
    <fullName>Education_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Partner</label>
    <type>Checkbox</type>
</CustomField>