force-app/main/default/objects/Account/fields/FICE_Code__c.field-meta.xml
<CustomField>
    <fullName>FICE_Code__c</fullName>
    <label>FICE Code</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>