force-app/main/default/objects/Account/fields/Industry_Detail__c.field-meta.xml
<CustomField>
    <fullName>Industry_Detail__c</fullName>
    <inlineHelpText>Created Feb 16, 3016 to accomodate importing of CIO List with very detailed Industry data</inlineHelpText>
    <label>Industry Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>