force-app/main/default/objects/Account/fields/Institute_Type__c.field-meta.xml
<CustomField>
    <fullName>Institute_Type__c</fullName>
    <label>Institute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>2 Year Program</fullName>
            </value>
            <value>
                <fullName>4 Year Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>