force-app/main/default/objects/Account/fields/Last_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Donation_Amount__c</fullName>
    <label>Last Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>