force-app/main/default/objects/Account/fields/Number_of_Donations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Donations__c</fullName>
    <label>Number of Donations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>