force-app/main/default/objects/Account/fields/of_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Employees__c</fullName>
    <label># of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-100</fullName>
            </value>
            <value>
                <fullName>101-300</fullName>
            </value>
            <value>
                <fullName>301-800</fullName>
            </value>
            <value>
                <fullName>800-1000</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>