force-app/main/default/objects/Account/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <label>Source Detail</label>
    <length>150</length>
    <type>Text</type>
</CustomField>