force-app/main/default/objects/Account/fields/TC_City__c.field-meta.xml
<CustomField>
    <fullName>TC_City__c</fullName>
    <label>TC City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>