force-app/main/default/objects/Account/fields/TC_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>TC_Contact_First_Name__c</fullName>
    <label>TC Contact First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>