force-app/main/default/objects/Account/fields/TC_CotC_Student_Lookup__c.field-meta.xml
<CustomField>
    <fullName>TC_CotC_Student_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TC Culture of the Call Trained Student</label>
    <referenceTo>BAD_Student__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>