force-app/main/default/objects/Account/fields/TC_Culture_of_Call_trained__c.field-meta.xml
<CustomField>
    <fullName>TC_Culture_of_Call_trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TC Culture of the Call trained?</label>
    <type>Checkbox</type>
</CustomField>