force-app/main/default/objects/Account/fields/TC_Denomination_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>TC_Denomination_Affiliation__c</fullName>
    <label>TC Denominational Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anabaptist (including Mennonite)</fullName>
            </value>
            <value>
                <fullName>Anglican</fullName>
            </value>
            <value>
                <fullName>Baptist (American)</fullName>
            </value>
            <value>
                <fullName>Baptist (Other)</fullName>
            </value>
            <value>
                <fullName>Baptist (Southern)</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Christian Churches/Churches of Christ</fullName>
            </value>
            <value>
                <fullName>Disciples of Christ</fullName>
            </value>
            <value>
                <fullName>Episcopal (PECUSA)</fullName>
            </value>
            <value>
                <fullName>Episcopal (Other)</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Lutheran (ELCA)</fullName>
            </value>
            <value>
                <fullName>Lutheran (Other)</fullName>
            </value>
            <value>
                <fullName>Methodist (United)</fullName>
            </value>
            <value>
                <fullName>Methodist (Other)</fullName>
            </value>
            <value>
                <fullName>Nazarene</fullName>
            </value>
            <value>
                <fullName>Non-Denominational</fullName>
            </value>
            <value>
                <fullName>Orthodox</fullName>
            </value>
            <value>
                <fullName>Pentecostal</fullName>
            </value>
            <value>
                <fullName>Presbyterian (PCUSA)</fullName>
            </value>
            <value>
                <fullName>Presbyterian (Other)</fullName>
            </value>
            <value>
                <fullName>Quaker</fullName>
            </value>
            <value>
                <fullName>United Church of Christ</fullName>
            </value>
            <value>
                <fullName>Wesleyan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer not to list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>