force-app/main/default/objects/Account/fields/TC_Membership_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>TC_Membership_Amount_Paid__c</fullName>
    <label>TC Membership Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>