force-app/main/default/objects/Account/fields/TC_Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TC_Membership_Expiration_Date__c</fullName>
    <formula>CreatedDate + 760</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TC Membership Expiration Date</label>
    <type>Date</type>
</CustomField>