force-app/main/default/objects/Account/fields/TC_Membership_Expiration_Date_ME__c.field-meta.xml
<CustomField>
    <fullName>TC_Membership_Expiration_Date_ME__c</fullName>
    <description>Timothy Circle Membership Expiration Manual Entry (ME)</description>
    <label>TC Membership Expiration Date - ME</label>
    <type>Date</type>
</CustomField>