force-app/main/default/objects/Account/fields/TC_Org_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>TC_Org_Contact_Email__c</fullName>
    <label>TC Org Contact Email</label>
    <type>Email</type>
</CustomField>