force-app/main/default/objects/Account/fields/TC_Org_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>TC_Org_Contact_Title__c</fullName>
    <description>Job Title of the main contact</description>
    <inlineHelpText>Job title of contact</inlineHelpText>
    <label>TC Org Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>