force-app/main/default/objects/Account/fields/TC_Org_Status__c.field-meta.xml
<CustomField>
    <fullName>TC_Org_Status__c</fullName>
    <label>TC Org Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TC_Org_Status</valueSetName>
    </valueSet>
</CustomField>