force-app/main/default/objects/Account/fields/TC_Referring_Organization__c.field-meta.xml
<CustomField>
    <fullName>TC_Referring_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the organization that referred this account to the Timothy Circle.</description>
    <label>TC Referring Organization</label>
    <referenceTo>TC_Organization_Member__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>