force-app/main/default/objects/Account/fields/TC_Representative__c.field-meta.xml
<CustomField>
    <fullName>TC_Representative__c</fullName>
    <label>TC Representative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steve Wilke</fullName>
            </value>
            <value>
                <fullName>Jen Burch</fullName>
            </value>
            <value>
                <fullName>Lori Richey</fullName>
            </value>
            <value>
                <fullName>Teryl Cartwright</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>