force-app/main/default/objects/Account/fields/TC_State__c.field-meta.xml
<CustomField>
    <fullName>TC_State__c</fullName>
    <label>TC State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>