force-app/main/default/objects/Account/fields/TC_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>TC_Street_Address__c</fullName>
    <label>TC Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>