force-app/main/default/objects/Account/fields/TC_Type__c.field-meta.xml
<CustomField>
    <fullName>TC_Type__c</fullName>
    <label>TC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Regional Denomination Office</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
            <value>
                <fullName>Other Ministry Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>