force-app/main/default/objects/Account/fields/TC_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>TC_ZipCode__c</fullName>
    <label>TC ZipCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>