force-app/main/default/objects/Account/fields/Tuition_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuition Reimbursement</label>
    <type>Checkbox</type>
</CustomField>