force-app/main/default/objects/Account/recordTypes/Church.recordType-meta.xml
<RecordType>
    <fullName>Church</fullName>
    <active>true</active>
    <label>Church</label>
</RecordType>