force-app/main/default/objects/Account/recordTypes/TC_Member_Org.recordType-meta.xml
<RecordType>
    <fullName>TC_Member_Org</fullName>
    <active>true</active>
    <label>TC Member Org</label>
</RecordType>