force-app/main/default/objects/Account/listViews/All_High_Schools.listView-meta.xml
<ListView>
    <fullName>All_High_Schools</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.High_School</value>
    </filters>
    <label>All High Schools</label>
</ListView>