force-app/main/default/objects/Account/listViews/Potential_TC_Member_Organizations.listView-meta.xml
<ListView>
    <fullName>Potential_TC_Member_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>TC_Contact_Last_Name__c</columns>
    <columns>TC_Contact_First_Name__c</columns>
    <columns>TC_Denomination_Affiliation__c</columns>
    <columns>TC_Org_Contact_Email__c</columns>
    <columns>TC_Org_Status__c</columns>
    <columns>TC_Representative__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>lrichey,jenburch,tcart</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Benefits Officer Non Members</value>
    </filters>
    <filters>
        <field>TC_Org_Status__c</field>
        <operation>notContain</operation>
        <value>Won!,Login info + contact made,Needs Opportunities</value>
    </filters>
    <label>Potential TC Member Organizations</label>
</ListView>