force-app/main/default/objects/Account/listViews/Tinker_List.listView-meta.xml
<ListView>
    <fullName>Tinker_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Detail__c</field>
        <operation>equals</operation>
        <value>Tinker</value>
    </filters>
    <label>Tinker List</label>
</ListView>